force-app/main/default/objects/Case/fields/Carer_Consent_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Carer_Consent_Obtained__c</fullName>
    <label>Carer Consent Obtained</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether carer/representative consent is recorded (demo field)</description>
</CustomField>