force-app/main/default/objects/Case/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName><label>Financial Year</label><type>Text</type><length>10</length>
</CustomField>