force-app/main/default/objects/Case/fields/Funding_Tier__c.field-meta.xml
<CustomField>
    <fullName>Funding_Tier__c</fullName>
    <label>Funding Tier</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Aged care funding tier (demo field)</description>
</CustomField>