force-app/main/default/objects/Case/fields/Income_Evidence_Provided__c.field-meta.xml
<CustomField>
    <fullName>Income_Evidence_Provided__c</fullName>
    <label>Income Evidence Provided</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether income evidence has been captured (demo field)</description>
</CustomField>