force-app/main/default/objects/Case/fields/QA_Summary__c.field-meta.xml
<CustomField>
    <fullName>QA_Summary__c</fullName><label>QA Summary</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines>
    <description>Narrative whole-submission QA assessment written by the agent.</description>
</CustomField>