force-app/main/default/objects/Case/fields/Reporting_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Quarter__c</fullName><label>Reporting Quarter</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Q1</fullName><default>false</default><label>Q1</label></value>
        <value><fullName>Q2</fullName><default>false</default><label>Q2</label></value>
        <value><fullName>Q3</fullName><default>true</default><label>Q3</label></value>
        <value><fullName>Q4</fullName><default>false</default><label>Q4</label></value>
    </valueSetDefinition></valueSet>
</CustomField>